--- a/pinch.cabal
+++ b/pinch.cabal
@@ -89,8 +89,10 @@ library
     , network >=3.1.2.0 && <3.2
     , semigroups >=0.18 && <0.21
     , text >=1.2 && <1.3 || >=2.0
+    , transformers >= 0.5 && < 1
     , unordered-containers ==0.2.*
     , vector >=0.10 && <0.14
+    , zlib >=0.4 && <1
   default-language: Haskell2010
 
 test-suite pinch-spec
